# Arion

./: .gitignore  Arion.hpp  Arion.sln  Arion.vcxproj  Arion.vcxproj.filters  ArionConst.hpp  ArionMatrix.cpp  ArionMatrix.hpp  ArionMatrixDeterminant.cpp  ArionMatrixRank.cpp  CMakeLists.txt  README.md  TODO.txt  main.cpp
Sources/: Arion.hpp  ArionConsts.hpp  main.cpp  tests.cpp
Sources/ArionMathFunctions/MathFunctions/: Exp.hpp  Factorial.hpp  Subfactorial.hpp
Sources/ArionMatrix/: ArionMatrix.cpp  ArionMatrix.hpp  ArionVectorColumn.cpp  ArionVectorRow.cpp  temp.cpp
Sources/ArionMatrix/ArionMatrixFunctions/: ArionMatrixDeterminant.cpp  ArionMatrixRank.cpp
Sources/Arion_MathFunctions/: ImportMathFunctions.hpp
Sources/Arion_MathFunctions/MathFunctions/: Exp.hpp  Sin.hpp
Sources/Arion_MathFunctions/MathFunctions/Trigonometry/: Cos.hpp  Ctg.hpp  Sin.hpp  Tan.hpp
Sources/Arion_Matrix/: ArionMatrix.cpp  ArionMatrix.hpp
Sources/Arion_Matrix/Arion_MatrixFunctions/: ArionMatrixDeterminant.cpp  ArionMatrixRank.cpp
x64/Debug/: Arion.exe.recipe  Arion.ilk  Arion.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Arion.tlog/: Arion.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
